--- a/newtab.html
+++ b/newtab.html
@@ -32,6 +32,7 @@
         <br />&bull; <a><span id="df">Change date format</span></a>
         <br />&bull; <a><span id="cu">Change or remove your name</span></a>
         <br />&bull; <a><span id="osb">Search box options</span></a>
+        <br />&bull; <a><span id="kc">View keyboard controls</span></a>
       <br />
       <div class="omt">Information</div>
       <br />&bull; Background images provided by <a href="https://unsplash.com">Unsplash.com</a>
@@ -71,6 +72,14 @@
       <br />&bull; Image URL: <span id="bii2"></span>
       <br />&bull; Photographer's web address: <span id="bii3"></span>
     </div>
+    <div class="om" id="kcm">
+      <img src="a/i/x.png" alt="Close" class="x" id="cnkcm">
+      <div class="omt">Keyboard controls</div>
+      <br />&bull; <b>[ESC]</b> to close any open menu
+      <br />&bull; <b>[G]</b> to toggle background grayscale
+      <br />&bull; <b>[O]</b> to open the options menu
+      <br />&bull; <b>[i]</b> to open the news and update information menu
+    </div>
     <div id="sbl">
       <img src="a/i/l/g.png" alt="Google Search" id="si0" class="sbc" />
       <img src="a/i/l/t.png" alt="Twitter Search" id="si1" class="sbc" />
@@ -81,9 +90,9 @@
     <div id="qb"></div>
     <div class="om" id="am">
       <img src="a/i/x.png" alt="Close" class="x" id="cnam" />
-      <div class="omt">Skye New Tab 3.0!</div>
+      <div class="omt">Skye v3.0.3 Update</div>
       <br />
-      Skye New Tab 3.0 is here! Every single line of code has been re-written from scratch to improve Skye's performance and your experiance using Skye. Since it's a complete re-write, there are bound to be issues. If you have discovered an issue please email <a href="mailto:benjaminandyy@gmail.com">benjaminandyy@gmail.com</a> or report it on <a href="https://github.com/BenAndy/SkyeNewTab/issues">the GitHub page (click)</a>. Thank you for using Skye!
+      Keyboard controls have now been added to Skye! You can view the controls in the options menu by clicking the cog on the top left hand corner of the screen, or by pressing [O]. If you have discovered an issue please email <a href="mailto:benjaminandyy@gmail.com">benjaminandyy@gmail.com</a> or report it on <a href="https://github.com/BenAndy/SkyeNewTab/issues">the GitHub page (click)</a>. You can view this message again at anytime by pressing [i]. Thank you for using Skye!
       <br /><br />
       <div class="omf">
         <a href="https://benandy.github.io/cookie" target="_blank">Cookie Policy</a> - <a href="https://benandy.github.io/privacy" target="_blank">Privacy Policy</a> - <a href="mailto:benjaminandyy@gmail.com">Contact</a> - <a href="https://unsplash.com/license" target="_blank">Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/change.log" target="_blank">Change Log</a>
