--- a/newtab.html
+++ b/newtab.html
@@ -34,6 +34,7 @@
         <br />&bull; <a><span id="cu">Change or remove your name</span></a>
         <br />&bull; <a><span id="osb">Search box options</span></a>
         <br />&bull; <a><span id="kc">View keyboard controls</span></a>
+        <br />&bull; <a><span id="ild">Icon display options</span></a>
       <br />
       <div class="omt">Information</div>
       <br />&bull; Background images provided by <a href="https://unsplash.com">Unsplash.com</a>
@@ -81,6 +82,15 @@
       <br />&bull; <b>[O]</b> to open the options menu
       <br />&bull; <b>[i]</b> to open the news and update information menu
     </div>
+    <div class="om" id="ildm">
+      <img src="a/i/x.png" alt="Close" class="x" id="cnildm">
+      <div class="omt">Icon Link Display Options</div>
+      <br />&bull; <a id="ild0">Coloured</a>
+      <br />&bull; <a id="ild1">Grayscale</a>
+      <br />&bull; <a id="ild2">Hidden</a>
+      <br />&bull; <a id="ild3">Coloured, only when mouseover</a>
+    </div>
+    <!-- END MENUS -->
     <div id="sbl">
       <img src="a/i/l/g.png" alt="Google Search" id="si0" class="sbc" />
       <img src="a/i/l/t.png" alt="Twitter Search" id="si1" class="sbc" />
@@ -91,9 +101,9 @@
     <div id="qb"></div>
     <div class="om" id="am">
       <img src="a/i/x.png" alt="Close" class="x" id="cnam" />
-      <div class="omt">Skye v3.0.3 Update</div>
+      <div class="omt">Skye v3.1.6 Update</div>
       <br />
-      Keyboard controls have now been added to Skye! You can view the controls in the options menu by clicking the cog on the top left hand corner of the screen, or by pressing [O]. If you have discovered an issue please email <a href="mailto:benjaminandyy@gmail.com">benjaminandyy@gmail.com</a> or report it on <a href="https://github.com/BenAndy/SkyeNewTab/issues">the GitHub page (click)</a>. You can view this message again at anytime by pressing [i]. Thank you for using Skye!
+      You can now change the display options of the icon links below the welcoming message. Go to the options menu and click "Icon display options" to see what options you have available. If you have discovered an issue please email <a href="mailto:benjaminandyy@gmail.com">benjaminandyy@gmail.com</a> or report it on <a href="https://github.com/BenAndy/SkyeNewTab/issues">the GitHub page (click)</a>. You can view this message again at anytime by pressing [i]. Thank you for using Skye!
       <br /><br />
       <div class="omf">
         <a href="https://benandy.github.io/cookie" target="_blank">Cookie Policy</a> - <a href="https://benandy.github.io/privacy" target="_blank">Privacy Policy</a> - <a href="mailto:benjaminandyy@gmail.com">Contact</a> - <a href="https://unsplash.com/license" target="_blank">Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/change.log" target="_blank">Change Log</a>
