--- a/newtab.html
+++ b/newtab.html
@@ -103,7 +103,7 @@
       <img src="a/i/x.png" alt="Close" class="x" id="cnam" />
       <div class="omt">Skye v3.1.6 Update</div>
       <br />
-      You can now change the display options of the icon links below the welcoming message. Go to the options menu and click "Icon display options" to see what options you have available. If you have discovered an issue please email <a href="mailto:benjaminandyy@gmail.com">benjaminandyy@gmail.com</a> or report it on <a href="https://github.com/BenAndy/SkyeNewTab/issues">the GitHub page (click)</a>. You can view this message again at anytime by pressing [i]. Thank you for using Skye!
+      Terms and Conditions have been updated as of 25<sup>th</sup> March, 2017 at 3:44PM AEDT. Please review the Terms and Conditions at <a href="https://benandy.github.io/terms">https://benandy.github.io/terms</a> If you have discovered an issue please email <a href="mailto:benjaminandyy@gmail.com">benjaminandyy@gmail.com</a> or report it on <a href="https://github.com/BenAndy/SkyeNewTab/issues">the GitHub page (click)</a>. You can view this message again at anytime by pressing [i]. Thank you for using Skye!
       <br /><br />
       <div class="omf">
         <a href="https://benandy.github.io/cookie" target="_blank">Cookie Policy</a> - <a href="https://benandy.github.io/privacy" target="_blank">Privacy Policy</a> - <a href="mailto:benjaminandyy@gmail.com">Contact</a> - <a href="https://unsplash.com/license" target="_blank">Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/change.log" target="_blank">Change Log</a>
