--- a/newtab.html
+++ b/newtab.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-AU">
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:600" rel="stylesheet" />
+    <link href="a/f/titillium_web/family.css" rel="stylesheet" />
     <link href="a/m.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="a/jquery.min.js" type="text/javascript"></script>
   </head>
   <body id="a">
     <header id="b"></header>
