--- a/newtab.html
+++ b/newtab.html
@@ -16,12 +16,12 @@
     <div class="ma" id="ab"></div>
     <div class="l" id="ld">
       <center>
-        <a id="l0" class="ll"><img src="a/i/l/g.png" alt="Google" title="Google" width="2%" /></a>
-        <a id="l1" class="ll"><img src="a/i/l/f.png" alt="Facebook" title="Facebook" width="2%" /></a>
-        <a id="l2" class="ll"><img src="a/i/l/i.png" alt="instagram" title="Instagram" width="2%" /></a>
-        <a id="l3" class="ll"><img src="a/i/l/p.png" alt="Pinterest" title="Pinterest" width="2%" /></a>
-        <a id="l4" class="ll"><img src="a/i/l/t.png" alt="Twitter" title="Twitter" width="2%" /></a>
-        <a id="l5" class="ll"><img src="a/i/l/y.png" alt="YouTube" title="YouTube" width="2%" /></a>
+        <a id="l0" class="ll"><img src="a/i/l/g.png" alt="Google" title="Google" width="1.75%" /></a>
+        <a id="l1" class="ll"><img src="a/i/l/f.png" alt="Facebook" title="Facebook" width="1.75%" /></a>
+        <a id="l2" class="ll"><img src="a/i/l/i.png" alt="instagram" title="Instagram" width="1.75%" /></a>
+        <a id="l3" class="ll"><img src="a/i/l/p.png" alt="Pinterest" title="Pinterest" width="1.75%" /></a>
+        <a id="l4" class="ll"><img src="a/i/l/t.png" alt="Twitter" title="Twitter" width="1.75%" /></a>
+        <a id="l5" class="ll"><img src="a/i/l/y.png" alt="YouTube" title="YouTube" width="1.75%" /></a>
       </center>
     </div>
     <div class="om" id="mom">
@@ -42,10 +42,12 @@
       <br />&bull; <a><span id="ibi">View background image information</span></a>
       <br /><br />
       <div class="omf">
+        Skye New Tab copyright <a href="https://benandy.github.io">Benjamin Developments</a> &copy; 2017 - All rights reserved
+        <br />
         <a href="https://benandy.github.io/cookie" target="_blank">Cookie Policy</a> - <a href="https://benandy.github.io/privacy" target="_blank">Privacy Policy</a> - <a href="mailto:benjaminandyy@gmail.com">Contact</a> - <a href="https://unsplash.com/license" target="_blank">Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/change.log" target="_blank">Change Log</a>
         - <a href="https://benandy.github.io/terms" target="_blank">Terms and Conditions</a>
         <br />
-        Skye New Tab copyright <a href="https://benandy.github.io">Benjamin Developments</a> &copy; 2017 - All rights reserved
+        <span id="sntv"></span>
       </div>
     </div>
     <div class="om" id="dfm">
@@ -103,7 +105,7 @@
       <img src="a/i/x.png" alt="Close" class="x" id="cnam" />
       <div class="omt">Skye v<span id="amv"></span> Update</div>
       <br />
-      Terms and Conditions have been updated as of 25<sup>th</sup> March, 2017 at 3:44PM AEDT. Please review the Terms and Conditions at <a href="https://benandy.github.io/terms">https://benandy.github.io/terms</a>.
+      Skye New Tab has recently gone under some big changes and we'd love to hear your feedback. It would be greatly appreciated if you could leave a review on the <a href="https://chrome.google.com/webstore/detail/skye-new-tab/hmgfgpieichmjmcbccbdcmfolhlmjcpg/reviews" target="_blank">Chrome Web Store</a> (<a href="https://chrome.google.com/webstore/detail/skye-new-tab/hmgfgpieichmjmcbccbdcmfolhlmjcpg/reviews" target="_blank">https://chrome.google.com/webstore/detail/skye-new-tab/hmgfgpieichmjmcbccbdcmfolhlmjcpg/reviews</a>). 
       <!-- DON'T EDIT ALERT BELOW THIS LINE -->
       &nbsp;If you have discovered an issue please email <a href="mailto:benjaminandyy@gmail.com">benjaminandyy@gmail.com</a> or report it on the GitHub page <a href="https://github.com/BenAndy/SkyeNewTab/issues">(https://github.com/BenAndy/SkyeNewTab/issues)</a>. You can view this message again at anytime by pressing [i]. Thank you for using Skye!
       <br /><br />
