--- a/newtab.html
+++ b/newtab.html
@@ -54,9 +54,9 @@
       <img src="a/i/x.png" alt="Close" class="x" id="cndfm" />
       <div class="omt">Date format</div>
       <br />&bull; <a><span id="dfo0">Sunday, January 1<sup>st</sup><span></a>
-      <br />&bull; <a><span id="dfo1"><span>January 1<sup>st</sup></a>
-      <br />&bull; <a><span id="dfo2"><span>Sunday, 1 January</a>
-      <br />&bull; <a><span id="dfo3"><span>January 1<sup>st</sup></a>
+      <br />&bull; <a><span id="dfo1">January 1<sup>st</sup><span></a>
+      <br />&bull; <a><span id="dfo2">Sunday, 1 January</a>
+      <br />&bull; <a><span id="dfo3">1 JAN 2017<span></a>
     </div>
     <div class="om" id="sbr">
       <img src="a/i/x.png" alt="Close" class="x" id="cnsbr" />
@@ -105,7 +105,7 @@
       <img src="a/i/x.png" alt="Close" class="x" id="cnam" />
       <div class="omt">Skye v<span id="amv"></span> Update</div>
       <br />
-      Skye New Tab has recently gone under some big changes and we'd love to hear your feedback. It would be greatly appreciated if you could leave a review on the <a href="https://chrome.google.com/webstore/detail/skye-new-tab/hmgfgpieichmjmcbccbdcmfolhlmjcpg/reviews" target="_blank">Chrome Web Store</a> (<a href="https://chrome.google.com/webstore/detail/skye-new-tab/hmgfgpieichmjmcbccbdcmfolhlmjcpg/reviews" target="_blank">https://chrome.google.com/webstore/detail/skye-new-tab/hmgfgpieichmjmcbccbdcmfolhlmjcpg/reviews</a>). 
+      Skye New Tab has recently gone under some big changes and we'd love to hear your feedback. It would be greatly appreciated if you could leave a review on the <a href="https://chrome.google.com/webstore/detail/skye-new-tab/hmgfgpieichmjmcbccbdcmfolhlmjcpg/reviews" target="_blank">Chrome Web Store</a> (<a href="https://chrome.google.com/webstore/detail/skye-new-tab/hmgfgpieichmjmcbccbdcmfolhlmjcpg/reviews" target="_blank">https://chrome.google.com/webstore/detail/skye-new-tab/hmgfgpieichmjmcbccbdcmfolhlmjcpg/reviews</a>).
       <!-- DON'T EDIT ALERT BELOW THIS LINE -->
       &nbsp;If you have discovered an issue please email <a href="mailto:benjaminandyy@gmail.com">benjaminandyy@gmail.com</a> or report it on the GitHub page <a href="https://github.com/BenAndy/SkyeNewTab/issues">(https://github.com/BenAndy/SkyeNewTab/issues)</a>. You can view this message again at anytime by pressing [i]. Thank you for using Skye!
       <br /><br />
