--- a/newtab.html
+++ b/newtab.html
@@ -71,6 +71,7 @@
     <div class="om" id="biim">
       <img src="a/i/x.png" alt="Close" class="x" id="cnbiim" />
       <div class="omt">Background Image Information</div>
+      <br />&bull; Background images last updated on <span id="bii4"></span>
       <br />&bull; Photographer: <span id="bii0"></span>
       <br />&bull; Photographer's Unsplash page: <span id="bii1"></span>
       <br />&bull; Image URL: <span id="bii2"></span>
